--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+    <head>
+        <title>Modern Office Box. by Officevibe</title>
+    </head>
 <body>
   <script src="./index.js"></script>
 </body>
