--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
     <head>
-        <title>Modern Office Box. by Officevibe</title>
+        <title>Odigo by GSoft</title>
     </head>
 <body>
-  <script src="./index.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
