--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Odigo by GSoft</title>
+        <title>Title</title>
     </head>
 <body>
     <script src="./index.js"></script>
