--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
     </head>
 <body>
+    <img src="images/building.png">
     <script src="./index.js"></script>
 </body>
 </html>
