--- a/index.html
+++ b/index.html
@@ -4,7 +4,63 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
     </head>
 <body>
-    <img src="images/building.png">
+    <div class="header">
+        <div class="mw1 center">
+            <div class="flex justify-between w-100">
+                <a href="#">
+                    <img src="images/odigo-logo.svg" alt="">
+                </a>
+                <nav>
+                    <ul class="ma0 pa0 flex">
+                        <li class="list white">Articles</li>
+                        <li class="list white">Locations</li>
+                        <li class="list white">Videos</li>
+                        <li class="list white">Sign in</li>
+                    </ul>
+                </nav>
+            </div>
+            <h1 class="white">Discover Amazing places in Japan</h1>
+            <p class="white">In hac habitasse platea dictumst. Vivamus adipiscing fermentum quam volutpat aliquam. Integer et elit eget elit facilisis tristique. Nam vel iaculis mauris. Sed ullamcorper tellus erat, non ultrices sem tincidunt euism.</p>
+            <a class="bg-blue white ttu">Search</a>
+        </div>
+    </div>
+    <div class="mw1 center">
+        <div class="vote flex">
+            <div class="flex justify-between w-33 vote-banner bg-black">
+                <p class="white ma0 pa0">NAGOYA</p>
+                <div class="vote-heart">
+                    <img src="images/heart.svg" data-heart>
+                    <span data-likes="221" class="white"></span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer class="footer bg-black">
+        <div class="mw1 center">
+            <a href="#">
+                <img src="images/odigo-logo.svg" alt="">
+            </a>
+            <nav>
+                <ul class="ma0 pa0">
+                    <li class="white list">Company</li>
+                    <li class="white list">About</li>
+                    <li class="white list">Team</li>
+                    <li class="white list">Careers</li>
+                    <li class="white list">Privacy Policy</li>
+                    <li class="white list">Locations</li>
+                    <li class="white list">Tokyo</li>
+                    <li class="white list">Kyoto</li>
+                    <li class="white list">Osaka</li>
+                    <li class="white list">Hokkaido</li>
+                    <li class="white list">Social Media</li>
+                    <li class="white list">Facebook</li>
+                    <li class="white list">Twitter</li>
+                    <li class="white list">Instagram</li>
+                    <li class="white list">Youtube</li>
+                </ul>
+            </nav>
+        </div>
+    </footer>
     <script src="./index.js"></script>
 </body>
 </html>
