added some text

--- a/index.html
+++ b/index.html
@@ -12,16 +12,17 @@
                 </a>
                 <nav>
                     <ul class="ma0 pa0 flex">
-                        <li class="list white">Articles</li>
-                        <li class="list white">Locations</li>
-                        <li class="list white">Videos</li>
-                        <li class="list white">Sign in</li>
+                        <li class="list white">Pricing</li>
+                        <li class="list white">Features</li>
+                        <li class="list white">Login</li>
+                        <li class="list white">Get Started</li>
                     </ul>
                 </nav>
             </div>
-            <h1 class="white">Discover Amazing places in Japan</h1>
+            <h1 class="white">Plan efficiently your next trip to Japan</h1>
             <p class="white">In hac habitasse platea dictumst. Vivamus adipiscing fermentum quam volutpat aliquam. Integer et elit eget elit facilisis tristique. Nam vel iaculis mauris. Sed ullamcorper tellus erat, non ultrices sem tincidunt euism.</p>
-            <a class="bg-blue white ttu">Search</a>
+            <input type="text" placeholder="Enter your email">
+            <a class="bg-blue white ttu">Get Started</a>
         </div>
     </div>
     <div class="mw1 center">
@@ -29,8 +30,23 @@
             <div class="flex justify-between w-33 vote-banner bg-black">
                 <p class="white ma0 pa0">NAGOYA</p>
                 <div class="vote-heart">
-                    <img src="images/heart.svg" data-heart>
                     <span data-likes="221" class="white"></span>
+                    <img src="images/heart.svg" data-heart>
+                </div>
+            </div>
+            <div class="flex justify-between w-33 vote-banner bg-black">
+                <p class="white ma0 pa0">Niigata</p>
+                <div class="vote-heart">
+                    <span data-likes="221" class="white"></span>
+                    <img src="images/heart.svg" data-heart>
+                </div>
+            </div>
+            <div class="flex justify-between w-33 vote-banner bg-black">
+                <p class="white ma0 pa0">Osaka</p>
+                <div class="vote-heart">
+                    <span data-likes="221" class="white"></span>
+                    <img src="images/heart.svg" data-heart>
+                    <img src="images/comment.svg" data-heart>
                 </div>
             </div>
         </div>
@@ -47,16 +63,12 @@
                     <li class="white list">Team</li>
                     <li class="white list">Careers</li>
                     <li class="white list">Privacy Policy</li>
-                    <li class="white list">Locations</li>
-                    <li class="white list">Tokyo</li>
-                    <li class="white list">Kyoto</li>
-                    <li class="white list">Osaka</li>
-                    <li class="white list">Hokkaido</li>
-                    <li class="white list">Social Media</li>
-                    <li class="white list">Facebook</li>
-                    <li class="white list">Twitter</li>
-                    <li class="white list">Instagram</li>
-                    <li class="white list">Youtube</li>
+                    <ul class="ma0 pa0">
+                        <li class="white list">App</li>
+                        <li class="white list">Feature</li>
+                        <li class="white list">Pricing</li>
+                        <li class="white list">Help Center</li>
+                    </ul>
                 </ul>
             </nav>
         </div>
