- Updating variables - Responsive minor QA - Adding like +1 selected state - Minor refactoring

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
                 </a>
                 <nav class="header_nav">
                     <ul class="ma0 pa0 flex align-center">
-                        <li class="list white">Pricing</li>
-                        <li class="list white">Features</li>
-                        <li class="list white">Login</li>
+                        <li class="list"><a href="#" class="white no-underline">Pricing</a></li>
+                        <li class="list white"><a href="#feature1" class="white no-underline">Features</a></li>
+                        <li class="list white"><a href="#" class="white no-underline">Login</a></li>
                         <li class="list white"><a href="#" class="btn btn--small">Get Started</a></li>
                     </ul>
                 </nav>
@@ -80,12 +80,14 @@
                     <h1 class="h1 white">Plan efficiently your next trip to Japan</h1>
                     <p class="p white mt2">In hac habitasse platea dictumst. Vivamus adipiscing fermentum quam volutpat aliquam. Integer et elit eget elit facilisis tristique. Nam vel iaculis mauris. Sed ullamcorper tellus erat, non ultrices sem tincidunt euism.</p>
                     <form action="" class="mt3">
-                        <div class="flex">
+                        <div class="flex align-end">
                             <div class="input">
                                 <label>Enter your email</label>
                                 <input type="email" class="mt1" required>
                             </div>
-                            <button class="btn btn--large mt2">Get Started</button>
+                            <div>
+                                <button class="btn btn--large mt1">Get Started</button>
+                            </div>
                         </div>
                     </form>
                 </div>
@@ -94,44 +96,50 @@
 
         <!-- Benefits -->
         <section class="flex align-center mt4">
-            <div class="mw1 center">
+            <div class="mw1 center primary-shadow p6">
                 <h2 class="h2 text-center">Plan less, travel more</h2>
-                <div class="flex align-center mt4">
-                    <div class="w-33 text-center">
-                        <img src="images/benefit1.svg" alt="" class="center" />
-                        <h3 class="h4">Benefit 1</h3>
-                        <p class="p">Fusce vehicula dolor arcu, sit amet blandit dolor mollis nec. Donec viverra eleifend la.</p>
+                <div class="flex align-center mt2">
+                    <div class="w-33">
+                        <div class="benefit text-center">
+                            <img src="images/benefit1.svg" alt="" class="center" />
+                            <h3 class="h4">Benefit 1</h3>
+                            <p class="p">Fusce vehicula dolor arcu, sit amet blandit dolor mollis nec. Donec viverra eleifend la.</p>
+                        </div>
                     </div>
-                    <div class="w-33 text-center">
-                        <img src="images/benefit2.svg" alt="" class="center" />
-                        <h3 class="h4">Benefit 2</h3>
-                        <p class="p">Fusce vehicula dolor arcu, sit amet blandit dolor mollis nec. Donec viverra eleifend la.</p>
+                    <div class="w-33">
+                        <div class="benefit text-center">
+                            <img src="images/benefit2.svg" alt="" class="center" />
+                            <h3 class="h4">Benefit 2</h3>
+                            <p class="p">Fusce vehicula dolor arcu, sit amet blandit dolor mollis nec. Donec viverra eleifend la.</p>
+                        </div>
                     </div>
-                    <div class="w-33 text-center">
-                        <img src="images/benefit3.svg" alt="" class="center" />
-                        <h3 class="h4">Benefit 3</h3>
-                        <p class="p">Fusce vehicula dolor arcu, sit amet blandit dolor mollis nec. Donec viverra eleifend la.</p>
+                    <div class="w-33">
+                        <div class="benefit text-center">
+                            <img src="images/benefit3.svg" alt="" class="center" />
+                            <h3 class="h4">Benefit 3</h3>
+                            <p class="p">Fusce vehicula dolor arcu, sit amet blandit dolor mollis nec. Donec viverra eleifend la.</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
 
         <!-- Feature1 -->
-        <section class="flex align-center mt4">
+        <section class="flex align-center mt4" id="feature1">
             <div class="mw1 center">
                 <div class="flex align-center">
                     <div class="w-50">
                         <img src="images/feature.png" alt=""class="full-width-image" />
                     </div>
-                    <div class="w-50">
-                        <h3 class="h3">Feature 1 vivamus adipiscing fermentum quam volutpat</h3>
+                    <div class="w-50 p4">
+                        <h3 class="h3 mt1">Feature 1 vivamus adipiscing fermentum quam volutpat</h3>
                         <p class="h4 mt1">
                             “Nam dapibus nisl vitae elit fringilla rutrum. Aenean sollicitudin,
                             erat a elementum rutrum, neque sem pretium metus, 
                             quis mollis nisl nunc et massa. Donec viverra eleifend la.”
                         </p>
-                        <div class="flex mt1">
-                            <div>
+                        <div class="flex mt1 align-center">
+                            <div class="mr1">
                                 <img src="images/justin-wong.png" alt="Picture of Justin Wong" />
                             </div>
                             <div>
@@ -148,18 +156,18 @@
         <section class="flex align-center mt4">
             <div class="mw1 center">
                 <div class="flex direction-row-reversed align-center">
-                    <div class="w-50">
+                    <div class="w-50 mt1">
                         <img src="images/feature-2.png" alt=""class="full-width-image" />
                     </div>
-                    <div class="w-50">
-                        <h3 class="h3">Feature 2 vivamus adipiscing fermentum quam volutpat</h3>
+                    <div class="w-50 p4">
+                        <h3 class="h3 mt1">Feature 2 vivamus adipiscing fermentum quam volutpat</h3>
                         <p class="h4 mt1">
                             “Nam dapibus nisl vitae elit fringilla rutrum. Aenean sollicitudin,
                             erat a elementum rutrum, neque sem pretium metus, 
                             quis mollis nisl nunc et massa. Donec viverra eleifend la.”
                         </p>
-                        <div class="flex mt1">
-                            <div>
+                        <div class="flex mt1 align-center">
+                            <div class="mr1">
                                 <img src="images/alexis-beesly.png" alt="Picture of Alexis Beesly" />
                             </div>
                             <div>
@@ -176,7 +184,7 @@
         <section class="bg-overlay bg-overlay--primary flex justify-center align-center full-section mt4" style="background-image: url('images/video-bg.jpg');">
             <a href="#" class="text-center white no-underline">
                 <img src="images/play-button.svg" alt="" class="center" />
-                <p>See how it works</p>
+                <p class="mt2">See how it works</p>
             </a>
         </section>
 
@@ -184,40 +192,40 @@
         <section class="mt4">
             <div class="mw1 center">
                 <div class="flex justify-between align-center">
-                    <div>
+                    <div class="mt1">
                         <h2 class="h2">Get inspired for your next trip</h2>
                     </div>
-                    <div>
+                    <div class="mt1">
                         <a href="#" class="link">View more</a>
                     </div>
                 </div>
-                <div class="flex mt4">
+                <div class="flex mt4 mequalizer-5">
                     <div class="w-50">
-                        <div class="bg-overlay bg-overlay--secondary ratio-16-9" style="background-image: url('images/mount-fuji.jpg')">
+                        <a href="#" class="primary-shadow bg-overlay bg-overlay--link bg-overlay--secondary ratio-16-9" style="background-image: url('images/mount-fuji.jpg')">
                             <h3 class="h1 white bg-overlay__title">Mount Fuji</h3>
-                        </div>
+                        </a>
                     </div>
                     <div class="w-50">
-                        <div class="bg-overlay bg-overlay--secondary ratio-16-9" style="background-image: url('images/kyoto.jpg')">
+                        <a href="#" class="primary-shadow bg-overlay bg-overlay--link bg-overlay--secondary ratio-16-9" style="background-image: url('images/kyoto.jpg')">
                             <h3 class="h1 white bg-overlay__title">Kyoto</h3>
-                        </div>
+                        </a>
                     </div>
                 </div>
-                <div class="flex">
+                <div class="flex mequalizer-5">
                     <div class="w-33">
-                        <div class="bg-overlay bg-overlay--secondary ratio-3-2" style="background-image: url('images/tokyo.jpg')">
+                        <a href="#" class="primary-shadow bg-overlay bg-overlay--link bg-overlay--secondary ratio-3-2" style="background-image: url('images/tokyo.jpg')">
                             <h3 class="h1 white bg-overlay__title">Tokyo</h3>
-                        </div>
+                        </a>
                     </div>
                     <div class="w-33">
-                        <div class="bg-overlay bg-overlay--secondary ratio-3-2" style="background-image: url('images/niigata.jpg')">
+                        <a href="#" class="primary-shadow bg-overlay bg-overlay--link bg-overlay--secondary ratio-3-2" style="background-image: url('images/niigata.jpg')">
                             <h3 class="h1 white bg-overlay__title">Niigata</h3>
-                        </div>
+                        </a>
                     </div>
                     <div class="w-33">
-                        <div class="bg-overlay bg-overlay--secondary ratio-3-2" style="background-image: url('images/sapporo.jpg')">
+                        <a href="#" class="primary-shadow bg-overlay bg-overlay--link bg-overlay--secondary ratio-3-2" style="background-image: url('images/sapporo.jpg')">
                             <h3 class="h1 white bg-overlay__title">Sapporo</h3>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -227,14 +235,14 @@
         <section>
             <div class="mw1 center">
                 <div class="flex justify-between align-center">
-                    <div>
+                    <div class="mt1">
                         <h2 class="h2">Learn about Japan</h2>
                     </div>
-                    <div>
+                    <div class="mt1">
                         <a href="#" class="link">View more</a>
                     </div>
                 </div>
-                <div class="flex mt4">
+                <div class="flex mt1 mequalizer-30">
                     <div class="w-33">
                         <div class="thumbnail">
                             <div class="thumbnail__image">
@@ -244,12 +252,12 @@
                                         <h3 class="p white text-uppercase">nagoya</h3>
                                     </div>
                                     <div>
-                                        <div class="action">
-                                            <span data-count="0" class="white"></span>
+                                        <div class="action action--like flex align-center">
+                                            <span data-count="210" class="white"></span>
                                             <img src="images/heart.svg">
                                         </div>
-                                        <div class="action">
-                                            <span data-count="0" class="white"></span>
+                                        <div class="action flex align-center">
+                                            <span data-count="341" class="white"></span>
                                             <img src="images/comment.svg">
                                         </div>
                                     </div>
@@ -272,12 +280,12 @@
                                         <h3 class="p white text-uppercase">Niigata</h3>
                                     </div>
                                     <div>
-                                        <div class="action">
-                                            <span data-count="0" class="white"></span>
+                                        <div class="action action--like flex align-center">
+                                            <span data-count="72" class="white"></span>
                                             <img src="images/heart.svg">
                                         </div>
-                                        <div class="action">
-                                            <span data-count="0" class="white"></span>
+                                        <div class="action flex align-center">
+                                            <span data-count="36" class="white"></span>
                                             <img src="images/comment.svg">
                                         </div>
                                     </div>
@@ -300,12 +308,12 @@
                                         <h3 class="p white text-uppercase">osaka</h3>
                                     </div>
                                     <div>
-                                        <div class="action">
-                                            <span data-count="0" class="white"></span>
+                                        <div class="action action--like flex align-center">
+                                            <span data-count="132" class="white"></span>
                                             <img src="images/heart.svg" data-heart>
                                         </div>
-                                        <div class="action">
-                                            <span data-count="0" class="white"></span>
+                                        <div class="action flex align-center">
+                                            <span data-count="87" class="white"></span>
                                             <img src="images/comment.svg">
                                         </div>
                                     </div>
@@ -322,35 +330,36 @@
                 </div>
             </div>
         </section>
-    </main>
+    
+        <!-- CTA -->
+        <section class="bg-overlay bg-overlay--primary flex justify-center align-center full-section mt4" style="background-image: url('images/video-teaser.jpg');">
+            <div class="text-center white">
+                <h2 class="h1">Ready for an adventure?<br/>So do we.</h2>
+                <a href="" class="btn btn--large mt4">Get started</a>
+            </div>
+        </section>
 
-    <!-- CTA -->
-    <section class="bg-overlay bg-overlay--primary flex justify-center align-center full-section mt4" style="background-image: url('images/video-teaser.jpg');">
-        <div class="text-center white">
-            <h2 class="h1">Ready for an adventure?<br/>So do we.</h2>
-            <a href="" class="btn btn--large mt4">Get started</a>
-        </div>
-    </section>
+    </main>
 
     <!-- Footer -->
     <footer class="footer bg-black">
         <div class="mw1 center">
             <div class="flex">
-                <div class="w-33">
+                <div class="w-33 mt3">
                     <a href="#">
                         <img src="images/odigo-logo.svg" alt="">
                     </a>
-                    <ul class="ma0 pa0 list flex mt2 footer__socials">
+                    <ul class="ma0 pa0 list flex mt3 footer__socials">
                         <li><a href="#" target="_blank"><img src="images/facebook.svg" alt="" /></a></li>
                         <li><a href="#" target="_blank"><img src="images/twitter.svg" alt="" /></a></li>
                         <li><a href="#" target="_blank"><img src="images/instagram.svg" alt="" /></a></li>
                         <li><a href="#" target="_blank"><img src="images/youtube.svg" alt="" /></a></li>
                     </ul>
                 </div>
-                <div class="w-17">
+                <div class="w-17 mt3">
                     <h4 class="h4 white">Company</h4>
                     <nav>
-                        <ul class="ma0 pa0 list mt1 p">
+                        <ul class="ma0 pa0 list mt2 p">
                             <li><a href="#" class="white no-underline">About</a></li>
                             <li><a href="#" class="white no-underline">Contact</a></li>
                             <li><a href="#" class="white no-underline">Careers</a></li>
@@ -358,28 +367,30 @@
                         </ul>
                     </nav>
                 </div>
-                <div class="w-17">
+                <div class="w-17 mt3">
                     <h4 class="h4 white">App</h4>
                     <nav>
-                        <ul class="ma0 pa0 list mt1 p">
+                        <ul class="ma0 pa0 list mt2 p">
                             <li><a href="#" class="white no-underline">Features</a></li>
                             <li><a href="#" class="white no-underline">Pricing</a></li>
                             <li><a href="#" class="white no-underline">Help center</a></li>
                         </ul>
                     </nav>
                 </div>
-                <div class="w-33">
+                <div class="w-33 mt3">
                     <h4 class="h4 white">Newsletter</h4>
-                    <p class="p white mt1">
+                    <p class="p white mt2">
                         Fusce vehicula dolor arcu, sit amet blandit dolor mollis nec. Donec viverra eleifend la.
                     </p>
-                    <form action="" class="mt1">
-                        <div class="flex">
+                    <form action="" class="mt2">
+                        <div class="flex align-end">
                             <div class="input">
                                 <label>Enter your email</label>
-                                <input type="email" class="mt1" required>
+                                <input type="email" class="mt2" required>
                             </div>
-                            <button class="btn btn--small mt1">Get Started</button>
+                            <div>
+                                <button class="btn btn--small mt2">Get Started</button>
+                            </div>
                         </div>
                     </form>
                 </div>
